# software_renderer

./: .gitignore  CMakeLists.txt  README.md
src/: Display.cpp  Display.h  Renderer.cpp  Renderer.h  main.cpp
